@@ -7,7 +7,7 @@
  * @author Rob Church <robchur@gmail.com>
  */
 
-class UncategorizedImagesPage extends QueryPage {
+class UncategorizedImagesPage extends ImageQueryPage {
 
 	function getName() {
 		return 'Uncategorizedimages';
@@ -36,12 +36,6 @@ class UncategorizedImagesPage extends QueryPage {
 				WHERE cl_from IS NULL AND page_namespace = {$ns} AND page_is_redirect = 0";
 	}
 
-	function formatResult( $skin, $row ) {
-		global $wgContLang;
-		$title = Title::makeTitleSafe( NS_IMAGE, $row->title );
-		$label = htmlspecialchars( $wgContLang->convert( $title->getText() ) );
-		return $skin->makeKnownLinkObj( $title, $label );
-	}
 }
 
 function wfSpecialUncategorizedimages() {
