@@ -7,7 +7,7 @@
 /**
  * @addtogroup SpecialPage
  */
-class UnusedimagesPage extends QueryPage {
+class UnusedimagesPage extends ImageQueryPage {
 
 	function getName() {
 		return 'Unusedimages';
@@ -36,34 +36,6 @@ class UnusedimagesPage extends QueryPage {
 			return 'SELECT img_name as title, img_user, img_user_text, img_timestamp as value, img_description' .
 			' FROM '.$image.' LEFT JOIN '.$imagelinks.' ON img_name=il_to WHERE il_to IS NULL ';
 		}
-	}
-
-	function formatResult( $skin, $result ) {
-		global $wgLang, $wgContLang;
-		$title = Title::makeTitle( NS_IMAGE, $result->title );
-
-		$imageUrl = htmlspecialchars( Image::imageUrl( $result->title ) );
-		$dirmark = $wgContLang->getDirMark(); // To keep text in correct order
-
-		$return =
-		# The 'desc' linking to the image page
-		'('.$skin->makeKnownLinkObj( $title, wfMsg('imgdesc') ).') ' . $dirmark .
-
-		# Link to the image itself
-		'<a href="' . $imageUrl . '">' . htmlspecialchars( $title->getText() ) .
-			'</a> . . ' . $dirmark .
-
-		# Last modified date
-		$wgLang->timeanddate($result->value) . ' . . ' . $dirmark .
-
-		# Link to username
-		$skin->makeLinkObj( Title::makeTitle( NS_USER, $result->img_user_text ),
-			$result->img_user_text) . $dirmark .
-
-		# If there is a description, show it
-		$skin->commentBlock( $wgContLang->convert( $result->img_description ) );
-
-		return $return;
 	}
 
 	function getPageHeader() {
